--- a/src/test/resources/local.properties
+++ b/src/test/resources/local.properties
@@ -1,5 +1,4 @@
 browser=CHROME
 browserSize=1920x1080
 browserVersion=113.0
-baseUrl=https://demoqa.com
-remoteUrl=https://demoqa.com
+baseUrl=https://spb.mts.ru/personal
