--- a/src/test/resources/remote.properties
+++ b/src/test/resources/remote.properties
@@ -1,5 +1,5 @@
 browser=CHROME
 browserSize=1920x1080
 browserVersion=100.0
-baseUrl=https://demoqa.com
+baseUrl=https://spb.mts.ru/personal
 remoteUrl=https://user1:1234@selenoid.autotests.cloud/wd/hub
